--- a/Revels'18/Info.plist
+++ b/Revels'18/Info.plist
@@ -6,6 +6,22 @@
 	<array>
 		<dict>
 			<key>UIApplicationShortcutItemType</key>
+			<string>Manipal.Revels-18.FavoritesPage</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Favorites</string>
+			<key>UIApplicationShortcutItemIconFile</key>
+			<string>Favorites</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconFile</key>
+			<string>Results</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Results</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>Manipal.Revels-18.ResultsPage</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemType</key>
 			<string>Manipal.Revels-18.SchedulePage</string>
 			<key>UIApplicationShortcutItemTitle</key>
 			<string>Schedule</string>
