--- a/Revels'18/Info.plist
+++ b/Revels'18/Info.plist
@@ -2,40 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>To Download Images From Instagram Feed</string>
-	<key>UIAppFonts</key>
-	<array>
-		<string>SanchezRegular.otf</string>
-		<string>BeyondTheMountains.ttf</string>
-	</array>
-	<key>UIApplicationShortcutItems</key>
-	<array>
-		<dict>
-			<key>UIApplicationShortcutItemType</key>
-			<string>Manipal.Revels-18.FavoritesPage</string>
-			<key>UIApplicationShortcutItemTitle</key>
-			<string>Favorites</string>
-			<key>UIApplicationShortcutItemIconFile</key>
-			<string>Favorites</string>
-		</dict>
-		<dict>
-			<key>UIApplicationShortcutItemIconFile</key>
-			<string>Results</string>
-			<key>UIApplicationShortcutItemTitle</key>
-			<string>Results</string>
-			<key>UIApplicationShortcutItemType</key>
-			<string>Manipal.Revels-18.ResultsPage</string>
-		</dict>
-		<dict>
-			<key>UIApplicationShortcutItemType</key>
-			<string>Manipal.Revels-18.SchedulePage</string>
-			<key>UIApplicationShortcutItemTitle</key>
-			<string>Schedule</string>
-			<key>UIApplicationShortcutItemIconFile</key>
-			<string>Calendar</string>
-		</dict>
-	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -56,6 +22,40 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>To Download Images From Instagram Feed</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>SanchezRegular.otf</string>
+		<string>BeyondTheMountains.ttf</string>
+	</array>
+	<key>UIApplicationShortcutItems</key>
+	<array>
+		<dict>
+			<key>UIApplicationShortcutItemIconFile</key>
+			<string>Favorites</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Favorites</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>Manipal.Revels-18.FavoritesPage</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconFile</key>
+			<string>Results</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Results</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>Manipal.Revels-18.ResultsPage</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemIconFile</key>
+			<string>Calendar</string>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Schedule</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>Manipal.Revels-18.SchedulePage</string>
+		</dict>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -64,6 +64,8 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
