--- a/Revels'18/Info.plist
+++ b/Revels'18/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Please allow access in order to save Instagram Images.</string>
-	<key>NSCameraUsageDescription</key>
-	<string>The camera is required to scan QR codes</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -23,10 +19,14 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>The camera is required to scan QR codes</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Please allow access in order to save Instagram Images.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Please allow access in order to save Instagram Images.</string>
 	<key>UIAppFonts</key>
 	<array>
@@ -37,11 +37,11 @@
 	<array>
 		<dict>
 			<key>UIApplicationShortcutItemIconFile</key>
-			<string>Favorites</string>
+			<string>Trophy</string>
 			<key>UIApplicationShortcutItemTitle</key>
-			<string>Favorites</string>
+			<string>Revels Cup</string>
 			<key>UIApplicationShortcutItemType</key>
-			<string>Manipal.Revels-18.FavoritesPage</string>
+			<string>Manipal.Revels-18.RevelsCup</string>
 		</dict>
 		<dict>
 			<key>UIApplicationShortcutItemIconFile</key>
